--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
   --hero-btn-hover: #188ce8;
   --icon-color: #afb1b8;
   --hero-bckgrnd: #c4c4c4;
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 body {
   font-family: "Roboto", sans-serif;
@@ -57,6 +58,8 @@ ul {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  transition: color 250ms var(--timing-function);
 }
 
 .current,
@@ -65,7 +68,6 @@ ul {
 .contacts-links:hover,
 .contacts-links:focus {
   color: var(--accent-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .main-nav-li {
   position: relative;
@@ -91,6 +93,8 @@ ul {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  transition: color 250ms var(--timing-function);
 }
 .container {
   width: 1200px;
@@ -170,11 +174,12 @@ ul {
   border-radius: 4px;
   border-width: 0px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+  transition: background-color 250ms var(--timing-function);
 }
 .hero-btn:hover,
 .hero-btn:focus {
   background-color: var(--hero-btn-hover);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* преимущества */
 .benefits-li-div {
@@ -302,6 +307,7 @@ ul {
   width: 44px;
   height: 44px;
   border-radius: 50%;
+  transition: background-color 250ms var(--timing-function);
 }
 .socials {
   display: flex;
@@ -311,16 +317,15 @@ ul {
 }
 .team-icon {
   fill: var(--icon-color);
+  transition: fill 250ms var(--timing-function);
 }
 .social-link:hover .ellipse,
 .social-link:focus .ellipse {
   background-color: #2196f3;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link:hover .team-icon,
 .social-link:focus .team-icon {
   fill: var(--footer-color);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Постоянные клиенты */
@@ -338,19 +343,20 @@ ul {
 
   border: 1px solid var(--icon-color);
   border-radius: 4px;
+
+  transition: border-color 250ms var(--timing-function);
 }
 .clients-icon {
   fill: var(--icon-color);
+  transition: fill 250ms var(--timing-function);
 }
 .clients-link:hover .clients-icon,
 .clients-link:focus .clients-icon {
   fill: var(--accent-color);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-link:hover .rectangle,
 .clients-link:focus .rectangle {
   border-color: var(--accent-color);
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* подвал */
 
@@ -377,6 +383,7 @@ ul {
 .footer-contacts {
   text-decoration: none;
   color: var(--footer-contacts);
+  transition: color 250ms var(--timing-function);
 }
 .adress-item:nth-child(-n + 2) {
   margin-bottom: 9px;
@@ -384,7 +391,6 @@ ul {
 .footer-contacts:hover,
 .footer-contacts:focus {
   color: var(--accent-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-right {
   min-width: 206px;
@@ -438,6 +444,11 @@ ul {
   line-height: 1.62;
   border-width: 0px;
   border-radius: 4px;
+  box-shadow: none;
+
+  transition: color 250ms var(--timing-function),
+    background-color 250ms var(--timing-function),
+    box-shadow 250ms var(--timing-function);
 }
 .portfolio-btn:hover,
 .portfolio-btn:focus {
@@ -445,9 +456,6 @@ ul {
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-list {
   display: flex;
@@ -472,24 +480,24 @@ ul {
 
 .portfolio-overlay {
   position: relative;
+  overflow: hidden;
 }
 .portfolio-overlay-text {
   position: absolute;
-  /* visibility: hidden; */
   bottom: 0;
   padding: 63px 24px;
   width: 100%;
   height: 100%;
   font-size: 18px;
   line-height: 1.56;
-  opacity: 0;
   color: var(--footer-color);
   background-color: rgba(33, 150, 243, 0.9);
-  /* color: transparent; */
+
+  transform: translateY(100%);
+  transition: transform 250ms var(--timing-function);
 }
 .portfolio-list-item:hover .portfolio-overlay-text {
-  /* visibility: visible; */
-  opacity: 1;
+  transform: translateY(0);
 }
 
 .card-bottom {
@@ -515,6 +523,8 @@ ul {
 .portfolio-link {
   display: block;
   text-decoration: none;
+  box-shadow: none;
+  transition: box-shadow 2500ms var(--timing-function);
 }
 .portfolio-link:hover,
 .portfolio-link:focus {
@@ -530,20 +540,30 @@ ul {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 2500ms var(--timing-function);
 }
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
 }
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.2);
+}
 .modal {
   position: absolute;
-  min-width: 528px;
-  min-height: 581px;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
+  min-width: 528px;
+  min-height: 581px;
+
   background-color: var(--footer-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform 250ms var(--timing-function);
 }
 .close-btn {
   position: absolute;
