--- a/css/styles.css
+++ b/css/styles.css
@@ -255,13 +255,13 @@ ul {
   position: absolute;
   bottom: 0;
   width: 100%;
-  display: block;
-  padding-top: 27px;
-  padding-bottom: 27px;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   font-weight: 700;
   line-height: 1.14;
-  text-align: center;
   text-transform: uppercase;
   color: var(--footer-color);
   background-color: rgba(47, 48, 58, 0.8);
@@ -493,7 +493,7 @@ ul {
   color: var(--footer-color);
   background-color: rgba(33, 150, 243, 0.9);
 
-  transform: translateY(100%);
+  transform: translateY(101%);
   transition: transform 250ms var(--timing-function);
 }
 .portfolio-list-item:hover .portfolio-overlay-text {
